<resources>
    <string name="app_name">WhatToDoIf?</string>
    <string name="start">Начать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textMale">Мужской</string>
    <string name="textFemale">Женсикий</string>
    <string name="textChooseSex">Укажите пол.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="register_now">register now</string>
    <string name="login">Login</string>
    <string name="heart">❤</string>
    <string name="coins">💰</string>
    <string name="x">X</string>
    <string name="continuee">продолжить</string>
    <string name="death_description">К сожалению вы ответили неверно и набрали: </string>
</resources>