<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/emailField"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text = ""
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/opacity_orange"
            android:textSize="20sp"


            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/passField"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text = ""
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/opacity_orange"
            android:textSize="20sp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/repeatPassField"
            android:hint="@string/repeat_your_password"
            android:inputType="textPassword"
            android:text = ""
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/opacity_orange"
            android:textSize="20sp"

            />


    </LinearLayout>


</androidx.cardview.widget.CardView>