<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePlayFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/mytext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <ImageView
        android:id="@+id/house_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/housebackground"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mother"
            android:layout_alignEnd="@+id/mother"
            android:layout_marginEnd="50dp"
            android:background="@color/white"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/mother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/mother" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heart1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/heart"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
                <TextView
                    android:id="@+id/heart2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:text="@string/heart" />
                <TextView
                    android:id="@+id/heart3"
                    android:layout_width="0dp"
                    android:textSize="24sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/red"
                    android:text="@string/heart" />
                <TextView
                    android:id="@+id/coins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:text="@string/coins"
                    />
                <TextView
                    android:id="@+id/empty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
                <TextView
                    android:id="@+id/empty2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/point1"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point2"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point3"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point4"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point5"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point6"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point7"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point8"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point9"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point10"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point11"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point12"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point13"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point14"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point15"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point16"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point17"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point18"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point19"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point20"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/firstChoiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/SecondChoiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <Button
            android:id="@+id/thirdChoiceButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />
    </LinearLayout>

</FrameLayout>